--- a/app/src/main/res/layout/activity_recordings.xml
+++ b/app/src/main/res/layout/activity_recordings.xml
@@ -23,7 +23,11 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:textColor="#FFFFFF"
             android:padding="0dp"
-            android:gravity="center" />
+            android:gravity="center"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp" />
 
         <TextView
             android:layout_width="0dp"
